--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -11,3 +11,15 @@
             color: var(--input-border);
         }
 }
+
+.error{
+    border: 1px solid var(--secondary-color);
+    &::placeholder{
+        color: var(--secondary-color);
+    }
+}
+
+.errorText {
+    text-align: left;
+    color: var(--secondary-color);
+}
