--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,19 +1,19 @@
-.container{
-    position: fixed;    
-    top: 0;              
-    right: 0;            
-    bottom: 0;           
-    left: 0;            
-    background: rgba(0, 0, 0, 0.5); 
-    display: flex;      
+.container {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
     align-items: center;
+    z-index: 1000;
 }
 
-.modal{
-    max-width: 480px;
+.modal {
+    width: 480px;
     margin-inline: auto;
     padding: 2rem;
     background-color: var(--dark-gray);
     border-radius: 0.5rem;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
