--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -8,6 +8,10 @@
     font-size: 1rem;
     font-weight: 700;
     transition: all 0.3s ease;
+
+    & > a{
+        color: var(--heading-color);
+    }
 }
 
 .primary{
